--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,15 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "fastapi[standard]>=0.112.1",
+dependencies = ["fastapi[standard]>=0.115.0", "structlog>=24.4.0"]
+
+[tool.uv]
+dev-dependencies = [
+    "httpx>=0.27.2",
+    "pytest>=8.3.3",
+    "pytest-cov>=5.0.0",
+    "ruff>=0.6.8",
 ]
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "I001"]
